<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SkyChat</string>
    <string name="title">(Android WebSockets Chat App)</string>
    <string name="author_name">By ZJ</string>
    <string name="author_url">www.skycitizen.net</string>
    <string name="enter_name">Enter your name</string>
    <string name="btn_join_private">Private Message</string>
    <string name="btn_join_channel">Channel Message</string>
    <string name="btn_send">Send</string>
    <string name="title_activity_name">NameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
